--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dappnode-manifest-parser",
+  "homepage": "http://ninajapan93.github.io/dappnode-manifest-parser",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,6 +14,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
